fixed spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,3 @@
-
-/* .jewels {
-  width: 700px;
-      height: 200px;
-      padding: 2%;
-      margin-top: 1%;
-} */
-
 body {
   background: grey;
 }
@@ -14,15 +6,14 @@ img {
   display: inline-block;
   width: 20%;
   padding: 1%;
-  margin:1%;
+  margin: 1%;
   height: 140px;
   width: 140px;
-
 }
 
 h1 {
   background: teal;
-  color:white;
+  color: white;
   font-size: 48px;
   padding: 1%;
   width: 600px;
@@ -31,9 +22,9 @@ h1 {
 
 h2 {
   background: teal;
-  color:white;
+  color: white;
   font-size: 24px;
-  width:200px;
+  width: 200px;
   padding-top: .75%;
   padding-bottom: .75%;
   margin-bottom: 1%;
@@ -42,11 +33,11 @@ h2 {
 
 #runningcount {
   background: teal;
-  color:white;
+  color: white;
   font-size: 52px;
-  width:200px;
+  width: 200px;
   padding-top: 3%;
-  height:100px;
+  height: 100px;
   text-align: center;
 }
 
@@ -54,9 +45,9 @@ h2 {
   background: #e225a7;
   color: white;
   font-size: 52px;
-  width:200px;
+  width: 200px;
   padding-top: 3%;
-  height:100px;
+  height: 100px;
   text-align: center;
   margin-bottom: 3%;
 }
@@ -72,30 +63,29 @@ p {
   background: #c47cc8;
   color: white;
   width: 400px;
-  /* text-align: center; */
   padding: 2%;
   padding-left: 1%;
   margin-bottom: 2%;
 }
 
 #score {
-    background: teal;
-    color:white;
-    font-size: 24px;
-    width:100px;
-    height:100px;
-    margin-top: 1%;
-    margin: 0px;
-    padding: 1%;
-  }
+  background: teal;
+  color: white;
+  font-size: 24px;
+  width: 100px;
+  height: 100px;
+  margin-top: 1%;
+  margin: 0px;
+  padding: 1%;
+}
 
-  #win {
-    padding: 1%;
-    padding-bottom: 10%;
-    padding-top: 2%;
-  }
+#win {
+  padding: 1%;
+  padding-bottom: 10%;
+  padding-top: 2%;
+}
 
-  #losses {
-    padding: 1%;
-    padding-top: 10%;
-  }
+#losses {
+  padding: 1%;
+  padding-top: 10%;
+}
